# aura-platform

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  FRONTEND_V1_IMPLEMENTATION.md  JWT_FIX_SUMMARY.md  README.md  TEST_FIXES.md  main.py  pyproject.toml  requirements.txt
api/: __init__.py  dependencies.py  middleware.py  sse_utils.py
api/routes/: __init__.py  agents.py  agents_enhanced.py  aura_analysis_runs.py  aura_backend.py  aura_cases.py  aura_internal.py  aura_rag.py  finance_agent.py  triggers.py
api/schemas/: __init__.py  common.py  events.py  hitl_events.py
core/: __init__.py  config.py  context.py  http_client.py  notifications.py  synapse_schema.py
core/action_integrity/: __init__.py  service.py
core/agent_stream/: __init__.py  constants.py  metadata.py  schemas.py  writer.py
core/analysis/: __init__.py  agent_config_schema.py  agent_factory.py  audit_analysis_events.py  audit_analysis_pipeline.py  callback.py  callback_client.py  phase2_events.py  phase2_pipeline.py  phase3_callback.py  phase3_events.py  phase3_pipeline.py  proposal_utils.py  rag.py  reasoning_citations.py  run_store.py
core/audit/: __init__.py  schemas.py  writer.py
core/llm/: __init__.py  client.py  prompts.py
core/memory/: __init__.py  checkpointer_factory.py  conversation.py  hitl_manager.py  redis_store.py
core/security/: __init__.py  auth.py  permissions.py
core/stores/: __init__.py  config_store.py
core/streaming/: __init__.py  case_stream_store.py
data/: rag_document_seed.json
database/: __init__.py  engine.py
database/models/: __init__.py  case_action.py  rag_chunk.py
docs/: AURA_PLATFORM_INTEGRATION_GUIDE.md  AURA_PLATFORM_INTERNAL_TEST.md  BACKEND_HANDOFF.md  BACKEND_INTEGRATION_CHECKLIST_REVIEW.md  BACKEND_INTEGRATION_COMPLETE.md  BACKEND_INTEGRATION_COMPLETE_FINAL.md  BACKEND_INTEGRATION_RESPONSE.md  BACKEND_INTEGRATION_STATUS.md  BACKEND_INTEGRATION_SUMMARY.md  BACKEND_INTEGRATION_TEST.md  DATABASE_STATUS_CHECK.md  FRONTEND_HANDOFF.md  FRONTEND_V1_SPEC.md  INTEGRATION_CHECKLIST.md  JWT_COMPATIBILITY.md  PHASE2_INTEGRATION_TEST.md  PHASE2_TEST_GUIDE.md  QUICK_START.md  README.md  README_BACKEND_DELIVERY.md  SETUP_SUCCESS.md
docs/20260203/: ADDITIONAL_WORK_PROMPTS.md  FRONTEND_V1_IMPLEMENTATION.md  JWT_TEST_RESULTS.md  PHASE1_COMPLETE.txt  PHASE2_COMPLETE.txt  PHASE3_COMPLETE.txt  PORT_CHANGE_SUMMARY.md  TEST_VERIFICATION_REPORT.md
docs/backend-integration/: BACKEND_INTEGRATION_CHECKLIST.md  BACKEND_INTEGRATION_CHECKLIST_RESPONSE.md  BACKEND_INTEGRATION_CHECKLIST_REVIEW.md  BACKEND_INTEGRATION_STATUS.md  BACKEND_UPDATE_SUMMARY.md  BACKEND_VERIFICATION_RESPONSE.md  INTEGRATION_STATUS.md  SSE_RECONNECT_POLICY.md
docs/handoff/: TO_BACKEND.md  (+39 more)
domains/: __init__.py
scripts/: check_database.py  check_rag_vector.py  init_rag_pgvector.py  run_integration_tests.sh  seed_agent_stream_events.py  seed_rag_documents.sql  stop_server.sh  test_agent_stream.py  test_aura_internal.py  test_backend_integration.py  test_checkpoint.py  test_conversation.py  test_jwt_compatibility.py  test_jwt_standalone.py  test_redis_basic.py  test_setup.py  test_stream_direct.py  verify_aura_stream_direct.py  verify_phase2.py
tests/: __init__.py
tools/: __init__.py  base.py  external_search_tool.py  synapse_finance_tool.py  tool_names.py
(+68 files in other folders)
