[tool.poetry]
name = "aura-platform"
version = "0.1.0"
description = "Agentic AI Platform for DWP - Modular SDLC Automation"
authors = ["DWP Development Team"]
readme = "README.md"
packages = [{include = "core"}, {include = "domains"}, {include = "api"}, {include = "tools"}]

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^1.0.0"
langgraph-checkpoint-sqlite = "^3.0.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-core = "^0.3.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-dotenv = "^1.0.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
httpx = "^0.27.0"
aiofiles = "^24.1.0"
redis = "^5.1.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.0"
pgvector = "^0.3.0"

[tool.poetry.group.rag.dependencies]
pypdf = "^5.0.0"
pymupdf = "^1.24.0"
langchain-text-splitters = "^0.3.0"
langchain-experimental = "^0.3.0"
chromadb = "^0.5.0"
langchain-chroma = "^0.1.0"
# 검증된 VectorStore 추상화; 향후 PGVector 전환 시 사용 (현재는 CAST-only 자체 구현)
langchain-community = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
black = "^24.8.0"
ruff = "^0.7.0"
mypy = "^1.11.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
